--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -5,6 +5,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$1
+    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
+    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
     # UPDATE THIS LINE ABOVE
 spec:
   rules:
